--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -20,7 +20,7 @@
     <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P2.png" >
+                <img class="activator" src="../assets/images/P2.png">
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Suzuka Wants to Fly (Compatible with VR) -using Unity3D<i class="material-icons right">more_vert</i></span>
@@ -28,8 +28,7 @@
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>In this Project, I focus on creating a third person controller system for my first anime character, with Swinging, Fly-Bursiting, wallwalking, and battle machanics. I also create a infinity City Generator to help me create a world easily.</p>
-                <br>
+                <p>A VR Demo Aimed to reduce the problem of motion sickness, used a third person view Spiderman style swinging game demo to try to discover a new world in visual reality for reducing this adverse consequence. In this Project, I create everything by myself, such as the building blocks, character model, particles, animations, and many game mechanics such as swinging moving, wall walking, battle system, and wall walking. Also, I created an infinite city generator instead of spending time on level design.</p>
                 <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37162427">Watch Video Here!</a></p>
             </div>
         </div>
@@ -38,10 +37,10 @@
 
 
 <div class="row">
-	<div class="col s20 m6">
+    <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P3.png" >
+                <img class="activator" src="../assets/images/P3.png">
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Beyond Atlantis -using TouchDesigner & Arduino<i class="material-icons right">more_vert</i></span>
@@ -49,7 +48,7 @@
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>Using the versatility of projection mapping and the depth of infinity mirrors to show a piece that would inspire curiosity about the wonders, beauty, and unknowns that lie deep beneath the surface of what the human eye can perceive; the deep sea.</p>
+                <p>An installation project which used the versatility of projection mapping and the depth of infinity mirrors to show a piece that would inspire curiosity about the wonders, beauty, and unknowns that lie deep beneath the surface of what the human eye can perceive; the deep sea.</p>
                 <br>
                 <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37162148">Watch video here!</a></p>
             </div>
@@ -58,15 +57,15 @@
     <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P7.png" >
+                <img class="activator" src="../assets/images/P7.png">
             </div>
             <div class="card-action">
-                <span class="card-title activator grey-text text-darken-4">Rhythm Game RPG - using Unity<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Troubadour - using Unity<i class="material-icons right">more_vert</i></span>
                 <p><a href="https://github.com/gucheng0712/Suzuka-Island">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>A Story Based Rhythm Game Made with Game design and art students, First time Collaboration</p>
+                <p>An RPG Rhythm Game collaborated which Game Design & Art Students. Functions Includes Inventory System, Data Saving and Loading, Dialogue, Social Media, Rhythm Gameplay, UI framework, and Storyline.</p>
                 <br>
                 <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37156808">Watch Video Here!</a></p>
             </div>
@@ -92,7 +91,7 @@
     <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P6.png" >
+                <img class="activator" src="../assets/images/P6.png">
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">3D Props Modelling - using Maya</span>
@@ -106,10 +105,10 @@
 </div>
 
 <div class="row">
-	<div class="col s20 m6">
+    <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P4.png" >
+                <img class="activator" src="../assets/images/P4.png">
             </div>
             <div class="card-action">
                 <span class="card-title activator grey-text text-darken-4">Animated Led Sign - using Arduino & P5.js<i class="material-icons right">more_vert</i></span>
@@ -123,23 +122,59 @@
             </div>
         </div>
     </div>
-    
-	<div class="col s20 m6">
+
+    <div class="col s20 m6">
         <div class="card medium sticky-action">
             <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="../assets/images/P8.png" >
+                <img class="activator" src="../assets/images/P8.png">
             </div>
             <div class="card-action">
-                <span class="card-title activator grey-text text-darken-4">Cartoon Island Level Design - using Unity & Premiere<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Cartoon Island Level Design - using Unity & Premiere & ShaderLab<i class="material-icons right">more_vert</i></span>
                 <p><a href="https://github.com/gucheng0712/RhythmRPG">{{site.project_button}}</a></p>
             </div>
             <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
-                <p>A Level Design Project for creating a beautiful cartoon environment</p>
+                <p>A Level Design and Unity Shader Programming Project for creating a beautiful cartoon environment</p>
                 <br>
                 <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://www.bilibili.com/video/av37152972">Watch Video Here!</a></p>
             </div>
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col s20 m6">
+        <div class="card medium sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="../assets/images/P9.png">
+            </div>
+            <div class="card-action">
+                <span class="card-title activator grey-text text-darken-4">CatBox - using Unity & Node.js & Vuforia<i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/CatBox-MultiPlayerAR">{{site.project_button}}</a></p>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p>A Multiplayer AR Game, aimed to create an interactive game which will be like a combination of a marker based “Pokémon Go” Game and Flag Capturing style game. A competitive game that makes players choose a team and try their best to collect the markers around the campus for better score.</p>
+                <br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://github.com/gucheng0712/CatBox-MultiPlayerAR">link here!</a></p>
+            </div>
+        </div>
+    </div>
 
+    <div class="col s20 m6">
+        <div class="card medium sticky-action">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="../assets/images/P10.png">
+            </div>
+            <div class="card-action">
+                <span class="card-title activator grey-text text-darken-4">Voice Basketball Machine - using Unity & Waston & Vuforia <i class="material-icons right">more_vert</i></span>
+                <p><a href="https://github.com/gucheng0712/AR-BasketballMachine">{{site.project_button}}</a></p>
+            </div>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+                <p>An AR basketball shooting game, shoot methods include swap screen and voice command.</p>
+                <br>
+                <p><a class="waves-effect waves-light btn blue darken-1" target="_blank" href="https://github.com/gucheng0712/AR-BasketballMachine">link here!</a></p>
+            </div>
+        </div>
+    </div>
+</div>
