--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -1,15 +1,16 @@
-<div class="search-tool"
-      style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px; opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
+<div class="search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px; opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
     <input type="text" class="form-control search-content" id="search-content" style="position: fixed; top: 60px" placeholder="Search Blog">
 
     <div style="position: fixed; top: 16px; right: 16px; z-index: 9999;">
-        <img src="{{ "/static/assets/img/search/cb-close.png" | prepend: site.baseurl }}" id="close-btn"/>
+        <img src="{{ " /static/assets/img/search/cb-close.png " | prepend: site.baseurl }}" id="close-btn" />
     </div>
 </div>
 
 <div style="position: fixed; right: 16px; bottom: 20px; z-index: 9999;">
-    <img src="{{ "/static/assets/img/search/cb-search.png" | prepend : site.baseurl }}"  id="search-btn"  title="Double click Ctrl"/>
+    <img src="{{ " /static/assets/img/search/cb-search.png " | prepend : site.baseurl }}" id="search-btn" title="Double click Ctrl" />
 </div>
+
+
 
 <div class="navbar-wrapper">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -21,26 +22,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ "/" | prepend: site.baseurl }}">{{ site.title }}</a>
+                <a class="navbar-brand" href="{{ " / " | prepend: site.baseurl }}">{{ site.title }}</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="page-scroll" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a></li>
-                    {% for tag in site.data.blog %}
-                        {% if tag.name != 'Donate' or site.donation %}
-                        {% if page.title == tag.name %}
-                        <li class="active">
+                    <li><a class="page-scroll" href="{{ " blog/ " | prepend: site.baseurl }}">{{ site.index.home }}</a></li>
+                    {% for tag in site.data.blog %} {% if tag.name != 'Donate' or site.donation %} {% if page.title == tag.name %}
+                    <li class="active">
                         {% else %}
                         <li>
-                        {% endif %}
-                        <a class="page-scroll" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a></li>
-                        {% endif %}
-                    {% endfor %}
+                            {% endif %}
+                            <a class="page-scroll" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a></li>
+                        {% endif %} {% endfor %}
                 </ul>
             </div>
         </div>
     </nav>
 </div>
-{% if site.blog_carousel %}
-{% include carousel.html %}
-{% endif %}
+{% if site.blog_carousel %} {% include carousel.html %} {% endif %}
