--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,9 @@
+--- 
+layout: default 
 ---
-layout: default
----
+
 <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      tex2jax: {
-        inlineMath: [['$','$'], ['\\(','\\)']],
-        processEscapes: true
-      }
-    });
+    MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ['\\(','\\)']], processEscapes: true } });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <div class="wrapper wrapper-content  animated fadeInRight article">
@@ -16,12 +12,11 @@ layout: default
             <div class="ibox">
                 <div class="ibox-content">
                     <div class="pull-right">
-                    	{% for category in page.categories %}
-                        	<a class="btn btn-white btn-xs" href="{{ category | downcase | prepend: '/' | prepend: site.baseurl }}">{{ category }}</a>
-                        {% endfor %}
+                        {% for category in page.categories %}
+                        <a class="btn btn-white btn-xs" href="{{ category | downcase | prepend: '/' | prepend: site.baseurl }}">{{ category }}</a> {% endfor %}
                     </div>
                     <div class="text-center article-title">
-                    <span class="text-muted"><i class="fa fa-clock-o"></i> {{ page.date | date: "%-d %b %Y" }}</span>
+                        <span class="text-muted"><i class="fa fa-clock-o"></i> {{ page.date | date: "%-d %b %Y" }}</span>
                         <h1>
                             {{ page.title }}
                         </h1>
@@ -29,20 +24,19 @@ layout: default
                     <div class="ibox-postpadding">
                         {{ content }}
                     </div>
+
                     <hr>
                     <div class="row">
                         <div class="col-md-6">
-                                <h5 style="display: inline;">Tags:</h5>
-                                {% for tag in page.tags %}
-                                    <button class="btn btn-white btn-xs" type="button">{{ tag }}</button>
-                                {% endfor %}
+                            <h5 style="display: inline;">Tags:</h5>
+                            {% for tag in page.tags %}
+                            <button class="btn btn-white btn-xs" type="button">{{ tag }}</button> {% endfor %}
                         </div>
                         <div class="col-md-6">
                             <div class="small text-right">
                                 <div>
-                                {% if site.disqus %}
-                                <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span> comments
-                                {% endif %}
+                                    {% if site.disqus %}
+                                    <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span> comments {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -51,9 +45,7 @@ layout: default
                     <div class="row">
                         <div class="col-lg-12">
                             <!-- donate -->
-                            {% if site.donation %}
-                            {% include donate.html %}
-                            {% endif %}
+                            {% if site.donation %} {% include donate.html %} {% endif %}
                             <br>
                             <!-- share -->
                             {% include share.html %}
