--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -22,21 +22,18 @@
                             <span class="navy">{{ project.name }}</span> {% endif %}
                         </h4>
                         <p><span data-i18n="projects.{{ project.i18n }}">{{ project.desc }}</span></p>
-                        
-                        <div user="{{ project.gh_user }}" repo="{{ project.repo }}" demo_url = "{{project.demo_url }}" class="ghbtn">
-                        {% if project.repo %}
+
+                        <div user="{{ project.gh_user }}" repo="{{ project.repo }}" demo_url="{{project.demo_url }}" class="ghbtn">
+                            {% if project.repo %}
                             <!-- <a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/stargazers" class="btn btn-white btn-xs star"><i class="fa fa-star"></i> ...</a>&emsp;&emsp;
                             <a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}/network" class="btn btn-white btn-xs fork"><i class="fa fa-github"></i></a> -->
-                            &emsp;<a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" class="btn btn-white btn-xs"><i class="fa fa-github"></i> GitHub</a>&emsp;
-                        {% endif %}
-                        {% if project.demo_url %}
-                            &emsp;<a target="_blank" style="width: 65px;" href="{{ project.demo_url }}" class="btn btn-white btn-xs"><i class="fa fa-play"> </i> Demo</a>&emsp;
-                        {% endif %}
+                            &emsp;<a target="_blank" style="width: 65px;" href="https://github.com/{{ project.gh_user }}/{{ project.repo }}" class="btn btn-white btn-xs"><i class="fa fa-github"></i> GitHub</a>&emsp; {% endif %} {% if project.demo_url %} &emsp;
+                            <a target="_blank" style="width: 65px;" href="{{ project.demo_url }}" class="btn btn-white btn-xs"><i class="fa fa-play"> </i> Demo</a>&emsp; {% endif %}
                             <div style="height: 10px;"></div>
                         </div>
-                      
 
-                    
+
+
                     </div>
                 </div>
                 {% endfor %}
